--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h1>Jaribio | Sign Up</h1>
             <div class="row">
                 <div class="form-wrapper">
-                    <form action="required/register.php" method="post">
+                    <form action="src/required/register.php" method="post">
                         <input type="text" name="username" placeholder="Username" id="username" required>
                         <input type="email" name="email" placeholder="Email" id="email" required>
                         <input type="password" name="password" placeholder="Password" id="password" required>
